--- a/Hw10/cummings_10.Rmd
+++ b/Hw10/cummings_10.Rmd
@@ -8,6 +8,468 @@ editor_options:
 ---
 
 ```{r}
+library(raster)
+library(tidyverse)
+library(ggthemes)
+library(patchwork)
+library(maptools)
+library(ggmap)
+library(marmap)
+```
+
+```{r}
+usa <- map_data(map= "state")
+usa
+```
+
+
+```{r}
+us_missouri <- map_data(map = "state",
+                        region = "missouri")
+
+us_missouri
+```
+
+```{r}
+us_other <- subset(x = usa,
+subset = region %in% c("alabama",
+"florida",
+"mississippi",
+"north carolina"))
+
+us_other
+```
+
+
+```{r}
+ggplot() + 
+  geom_polygon(data = us_other, 
+               aes(x = long, 
+                   y = lat, 
+                   group = group), 
+               fill = "gray")
+```
+
+```{r}
+ggplot() +
+geom_polygon(data = us_other,
+aes(x = long,
+y = lat,
+group = group),
+fill = "gray") +
+geom_polygon(data = us_missouri,
+aes(x = long, y = lat,
+group = group),
+fill = "black")
+```
+
+```{r}
+ggplot() +
+geom_polygon(data = us_other,
+aes(x = long,
+y = lat,
+group = group),
+fill = "gray") +
+geom_polygon(data = us_missouri,
+aes(x = long, y = lat,
+group = group),
+fill = "black") +
+geom_polygon(data = usa,
+aes(x=long,
+y = lat,
+group = group),
+fill = NA,
+color = "black")
+```
+
+```{r}
+us_map <- ggplot() +
+geom_polygon(data = us_other,
+aes(x = long,
+y = lat,
+group = group),
+fill = "gray") +
+geom_polygon(data = us_missouri,
+aes(x = long, y = lat,
+group = group),
+fill = "black") +
+geom_polygon(data = usa,
+aes(x=long,
+y = lat,
+group = group),
+fill = NA,
+color = "black") +
+theme_map() +
+coord_fixed(1.3)
+
+us_map
+```
+
+```{r}
+missouri <- map_data("county", "missouri")
+mo_scott <- subset(missouri, subregion %in% c("scott"))
+mo_map <- ggplot() +
+geom_polygon(data = missouri, aes(x=long, y = lat, group = group), fill = NA, color = "black") +
+geom_polygon(data = mo_scott, aes(x = long, y = lat, group = group), fill = "black") +
+theme_map() +
+coord_fixed(1.3)
+
+mo_map
+```
+
+```{r}
+us_map + mo_map + plot_layout(ncol = 2, widths = c(1.5,1))
 
 ```
+
+```{r}
+us_map_melvin <- ggplot() + 
+  geom_polygon(data = us_missouri, 
+               aes(x = long, y = lat, 
+                   group = group), 
+               fill = "black") +
+  geom_polygon(data = usa, 
+               aes(x=long, 
+                   y = lat, 
+                   group = group), 
+               fill = NA, 
+               color = "black") + 
+  theme_map() +
+  coord_fixed(1.3)
+us_map_melvin
+```
+
+```{r}
+missouri <- map_data("county", "missouri")
+mo_birth <- subset(missouri, subregion %in% c("pemiscot"))
+mo_names <- subset(missouri, subregion %in% c("madison", "cole"))
+
+missouri_melvin <- ggplot()+
+  geom_polygon(data = mo_birth,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "black")+
+  geom_polygon(data = mo_names,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "gray")+
+  geom_polygon(data = missouri,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = NA,
+               color = "black")+
+  theme_map()+
+  coord_fixed(1.3)
+
+missouri_melvin
+```
+
+
+```{r}
+us_map_melvin + missouri_melvin + plot_layout(ncol = 2, widths = c(1.5,1))
+```
+
+#Part 2
+
+```{r}
+library(raster)
+library(tidyverse)
+library(ggthemes)
+library(ggmap)
+```
+
+```{r}
+min_long <- -126
+max_long <- -104
+min_lat  <-   31
+max_lat  <-   50
+
+set.seed(9618973)
+```
+
+```{r}
+file_path <- "~/Bi485/cummings_melvin/data"
+
+bigfoot <-
+  read_csv(file.path(file_path, "bigfoot.csv"))
+bigfoot
+```
+
+```{r}
+bigfoot <- filter(bigfoot,
+                  long >= min_long & long <= max_long,
+                  lat >= min_lat & lat <= max_lat) %>% 
+  sample_n(300) %>% 
+  mutate(name = "Gigantopithecus")
+bigfoot
+
+```
+```{r}
+file_path2 <- "~/Bi485/cummings_melvin/data"
+
+bears <-
+  read_csv(file.path(file_path, "bears.csv"))
+bears
+```
+
+
+
+```{r}
+both_species <- bind_rows(bigfoot, bears)
+head(both_species)
+```
+
+```{r}
+tail(both_species)
+```
+
+```{r}
+base = get_stamenmap(bbox = c(min_long,
+min_lat,
+max_long,
+max_lat),
+zoom = 4,
+maptype = "terrain-background")
+ggmap(base)
+```
+
+```{r}
+base <- ggmap(base)
+base + geom_point(data = bigfoot,
+aes(x = long,
+y = lat))
+```
+
+```{r}
+base + geom_point(data = bears,
+aes(x = long,
+y = lat))
+```
+
+```{r}
+base + geom_point(data = both_species,
+aes(x = long,
+y = lat,
+shape = name,
+fill = name),
+size = 2) +
+scale_shape_manual(values = c(22:23)) +
+labs(x = "Longitude",
+y = "Latitude",
+fill = "Species",
+shape = "Species")
+
+```
+
+```{r}
+min_long <- -126
+max_long <- -104
+min_lat  <-   31
+max_lat  <-   50
+set.seed(1790569)
+```
+
+```{r}
+
+```{r}
+file_path <- "~/Bi485/cummings_melvin/data"
+
+bigfoot <-
+  read_csv(file.path(file_path, "bigfoot.csv"))
+bigfoot
+```
+
+```{r}
+bigfoot <- filter(bigfoot,
+                  long >= min_long & long <= max_long,
+                  lat >= min_lat & lat <= max_lat) %>% 
+  sample_n(300) %>% 
+  mutate(name = "Gigantopithecus")
+bigfoot
+
+```
+```{r}
+file_path2 <- "~/Bi485/cummings_melvin/data"
+
+bears <-
+  read_csv(file.path(file_path, "bears.csv"))
+bears
+```
+
+
+
+```{r}
+both_species <- bind_rows(bigfoot, bears)
+head(both_species)
+```
+
+```{r}
+tail(both_species)
+```
+
+```{r}
+base = get_stamenmap(bbox = c(min_long,
+min_lat,
+max_long,
+max_lat),
+zoom = 4,
+maptype = "terrain-background")
+ggmap(base)
+```
+
+```{r}
+base <- ggmap(base)
+base + geom_point(data = bigfoot,
+aes(x = long,
+y = lat))
+```
+
+```{r}
+base + geom_point(data = bears,
+aes(x = long,
+y = lat))
+```
+
+```{r}
+base + geom_point(data = both_species,
+aes(x = long,
+y = lat,
+shape = name,
+fill = name),
+size = 2) +
+scale_shape_manual(values = c(22:23)) +
+labs(x = "Longitude",
+y = "Latitude",
+fill = "Species",
+shape = "Species")
+
+```
+
+
+```{r}
+min_long <- -170
+max_long <- 164
+min_lat <- -42
+max_lat <- -8
+
+earthquakes <- quakes %>%
+mutate(depth = depth * 3280.84)
+```
+
+```{r}
+fiji <- getNOAA.bathy(lon1 = min_long,
+lon2 = max_long,
+lat1 = min_lat,
+lat2 = max_lat,
+antimeridian = TRUE,
+keep = TRUE)
+
+```
+
+```{r}
+autoplot.bathy(fiji,
+geom = c("raster", "contour"),
+size = 0.1,
+na.rm = TRUE)
+```
+
+```{r}
+autoplot(fiji,
+geom = c("raster","contour"),
+size = 0.1,
+na.rm = TRUE) +
+scale_fill_gradient2(low = "dodgerblue4",
+mid = "gainsboro",
+high = "darkgreen",
+name = "Depth (ft)") +
+labs(x = "Longitude",
+y = "Latitude") +
+theme(axis.title.y = element_text(angle = 0,
+vjust = 0.5))
+```
+
+```{r}
+base_map <- autoplot(fiji,
+geom = c("raster","contour"),
+size = 0.1,
+na.rm = TRUE) +
+scale_fill_gradient2(low = "dodgerblue4",
+mid = "gainsboro",
+high = "darkgreen",
+name = "Depth (ft)") +
+labs(x = "Longitude",
+y = "Latitude") +
+theme(axis.title.y = element_text(angle = 0,
+vjust = 0.5))
+```
+
+```{r}
+base_map +
+geom_point(data = earthquakes,
+aes(x = long,
+y = lat))
+```
+
+```{r}
+base_map +
+geom_point(data = earthquakes,
+aes(x = long,
+y = lat,
+size = mag),
+alpha = 0.4) +
+scale_size_continuous(range = c(0.5,3), name = "Magnitude")
+```
+
+```{r}
+min_long <- -90
+max_long <- -58
+min_lat <- 8
+max_lat <- 28
+```
+
+```{r}
+file_path3 <-"~/Bi485/cummings_melvin/data"
+blennies <- read.csv(file.path(file_path3, "blennies.csv"))
+blennies
+```
+
+```{r}
+carib_sea <- getNOAA.bathy(lon1 = min_long,
+                           lon2 = max_long,
+                           lat1 = min_lat,
+                           lat2 = max_lat,
+                           antimeridian = FALSE,
+                           keep = TRUE)
+```
+
+```{r}
+base_map <- autoplot(carib_sea,
+         geom = c("raster", "contour"),
+         size = 0.1,
+         na.rm = TRUE) +
+  scale_fill_etopo(guide = FALSE)+
+  labs(x = "Longitude",
+       y = "Latitude")+
+  theme(axis.title.y = element_text(angle = 0,
+                                    vjust = 0.5))
+base_map
+```
+
+```{r}
+base_map + geom_point(data = blennies,
+                      aes(x = long,
+                          y = lat,
+                          shape = name),
+                      fill = "white",
+                      size =2.5)+
+  scale_shape_manual(values = c(21:23))+
+  labs(shape = "Species")+
+  theme(legend.position = "bottom")+
+  theme(legend.text = element_text(face = "italic"))
+
+```
+
 
